harden CSP, inject session token into JS, define 0 cache policy

--- a/crates/wallets/src/wallet_browser/app/assets/index.html
+++ b/crates/wallets/src/wallet_browser/app/assets/index.html
@@ -3,40 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--SESSION_SCRIPT-->
     <title>Foundry Browser Wallet</title>
-    <style>
-      html,
-      body {
-        font-family: system-ui, sans-serif;
-        margin: 0;
-        padding: 2rem;
-        background: #fafafa;
-        color: #222;
-      }
-      h1 {
-        font-size: 1.4rem;
-        margin-bottom: 1rem;
-      }
-      button {
-        padding: 0.6rem 1rem;
-        border-radius: 0.5rem;
-        border: 1px solid #ccc;
-        background: white;
-        cursor: pointer;
-      }
-      button:hover {
-        background: #eee;
-      }
-      pre {
-        background: #f5f5f5;
-        border: 1px solid #ddd;
-        padding: 0.5rem;
-        border-radius: 0.5rem;
-        max-height: 300px;
-        overflow: auto;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Foundry Browser Wallet</h1>
@@ -63,190 +31,6 @@
       <pre id="log"></pre>
     </section>
 
-    <script>
-      const TOKEN = window.__WALLET_TOKEN__;
-      const headers = {
-        "Content-Type": "application/json",
-        "X-Session-Token": TOKEN,
-      };
-      let currentTxId = null;
-
-      const $pending = document.getElementById("pending");
-      const $log = document.getElementById("log");
-      const $connStatus = document.getElementById("conn-status");
-      const $checkConn = document.getElementById("check-connection");
-      const $connect = document.getElementById("connect");
-      const $disconnect = document.getElementById("disconnect");
-      const $sign = document.getElementById("sign");
-
-      async function api(path, method = "GET", body) {
-        const opts = { method, headers };
-
-        if (body !== undefined) opts.body = JSON.stringify(body);
-
-        const res = await fetch(path, opts);
-
-        if (!res.ok) {
-          throw new Error(
-            `API request failed: ${res.status} ${res.statusText}`
-          );
-        }
-
-        const json = await res.json().catch(() => {
-          throw new Error("Invalid JSON");
-        });
-
-        return json;
-      }
-
-      function log(...args) {
-        $log.textContent +=
-          args
-            .map((a) =>
-              typeof a === "object" ? JSON.stringify(a, null, 2) : a
-            )
-            .join(" ") + "\n";
-        $log.scrollTop = $log.scrollHeight;
-      }
-
-      function normalizeTo(toField) {
-        if (!toField) return null;
-        if (typeof toField === "string") return toField;
-        if (typeof toField === "object") {
-          if ("Call" in toField) return toField.Call;
-          if ("Create" in toField) return null;
-        }
-        return toField;
-      }
-
-      function hexToDecimalMaybe(hex) {
-        if (!hex || typeof hex !== "string" || !hex.startsWith("0x"))
-          return hex ?? null;
-        try {
-          return `${hex} (${BigInt(hex).toString(10)})`;
-        } catch {
-          return hex;
-        }
-      }
-
-      function randomTxHash() {
-        const bytes = crypto.getRandomValues(new Uint8Array(32));
-        return (
-          "0x" +
-          Array.from(bytes, (b) => b.toString(16).padStart(2, "0")).join("")
-        );
-      }
-
-      function renderPending(resp) {
-        if (!resp || resp.status !== "ok") {
-          currentTxId = null;
-          $sign.disabled = true;
-          $pending.textContent = "No pending transaction";
-          return;
-        }
-        const tx = resp.data;
-        currentTxId = tx.id;
-        $sign.disabled = false;
-        $pending.textContent = JSON.stringify(tx, null, 2);
-      }
-
-      function randomTxHash() {
-        const bytes = crypto.getRandomValues(new Uint8Array(32));
-        return (
-          "0x" +
-          Array.from(bytes, (b) => b.toString(16).padStart(2, "0")).join("")
-        );
-      }
-
-      async function refreshPending() {
-        try {
-          const resp = await api("/api/transaction/request");
-          renderPending(resp);
-          log("GET /api/transaction/request", resp);
-        } catch (e) {
-          $pending.textContent = "Error reading queue";
-          log("Error:", String(e));
-        }
-      }
-
-      async function checkQueue() {
-        const resp = await api("/api/transaction/request");
-
-        // Only update UI/log if something changed or meaningful happened
-        if (resp && resp.status === "ok") {
-          renderPending(resp);
-          log("Pending transaction found:", resp.data.id);
-
-          clearInterval(poll);
-          log("Paused polling — waiting for queue to clear");
-
-          // Wait until the queue clears, then restart polling
-          const prevId = resp.data.id;
-          const waitForClear = setInterval(async () => {
-            const nxt = await api("/api/transaction/request");
-
-            if (!nxt || nxt.status !== "ok") {
-              clearInterval(waitForClear);
-              poll = setInterval(checkQueue, 1000);
-              log("Resumed polling — queue cleared");
-            } else if (nxt.data.id !== prevId) {
-              // A new tx appeared before the old cleared
-              renderPending(nxt);
-              log("Switched to new pending transaction:", nxt.data.id);
-            }
-          }, 1000);
-        } else {
-          // Only refresh the UI silently when empty
-          renderPending(resp);
-        }
-      }
-
-      $checkConn.addEventListener("click", async () => {
-        const resp = await api("/api/connection");
-        if (resp.status === "ok" && resp.data) {
-          const [addr, chain] = resp.data;
-          $connStatus.innerHTML = `Status: <b>connected</b> (${addr} on chain ${chain})`;
-        } else {
-          $connStatus.innerHTML = "Status: <b>disconnected</b>";
-        }
-        log("Connection status:", resp);
-      });
-
-      $connect.addEventListener("click", async () => {
-        const resp = await api("/api/connection", "POST", [
-          "0xF39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
-          1,
-        ]);
-        log("POST /api/connection", resp);
-        $checkConn.click();
-      });
-
-      $disconnect.addEventListener("click", async () => {
-        const resp = await api("/api/connection", "POST", null);
-        log("POST /api/connection (disconnect)", resp);
-        $checkConn.click();
-      });
-
-      $sign.addEventListener("click", async () => {
-        if (!currentTxId) return;
-
-        try {
-          const hash = randomTxHash();
-          const res = await api("/api/transaction/response", "POST", {
-            id: currentTxId,
-            hash,
-            error: null,
-          });
-          log("Submitted mock tx hash", { id: currentTxId, hash, result: res });
-        } catch (e) {
-          log("Sign (mock) failed:", String(e));
-        }
-      });
-
-      refreshPending();
-
-      let poll = setInterval(checkQueue, 1000);
-      checkQueue();
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
